Fixed alignment problem

--- a/css/afegir_serveis_style.css
+++ b/css/afegir_serveis_style.css
@@ -43,7 +43,7 @@ body {
 }
 
 .section-title little {
-	font-size: 11px;
+	font-size: 9px;
 }
 
 .tramitar-btn {
